# job-listing

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build.yaml
crates/job-listing-core/: Cargo.toml
crates/job-listing-core/src/: lib.rs
src/: main.rs
src/render/: html.rs
