[package]
name = "job-listing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.100", features = ["derive"] }
clap = { version = "3.1.2", features = ["derive"] }
indicatif = "0.16.2"
serde_json = "1.0.59"